--- a/templates/store/store_warehouse.html
+++ b/templates/store/store_warehouse.html
@@ -93,7 +93,7 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th>📦Aboi nomi</th>
+        <th>Tavar</th>
         <th>🏢 Sklad</th>
         <th>🏬 Vitrina</th>
       </tr>
