--- a/templates/warehouse/wareHouse.html
+++ b/templates/warehouse/wareHouse.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="True" id="flexCheckDefault" name="isFromAll" {% if is_from_all %}checked{% endif %} />
-                    <label class="form-check-label" for="flexCheckDefault"> From all warehouses </label>
+                    <label class="form-check-label" for="flexCheckDefault"> Barchasidan qidirish! </label>
                 </div>
             </form>
         </div>
@@ -102,7 +102,7 @@
                             {% for store_name, store in data.0.store_quantities.items %}
                             <th style="max-width: 10ch; overflow: hidden; text-overflow: ellipsis;">{{ store_name }}</th>
                             {% endfor %}
-                            <th>Left</th>
+                            <th>Qoldi</th>
                             <th>Shelf</th>
                             <th>Actions</th>
                             {% endif %}
@@ -128,7 +128,7 @@
                                         <i class="fas fa-plus"></i>
                                     </button>
                                 </div>
-                            </td>
+                            </td>                            
                             {% endfor %}
                             <td class="left-in-warehouse">{{ entry.left_product_count_in_warehouse }}</td>
                             <td style="max-width: 10ch; overflow: hidden; text-overflow: ellipsis;">
@@ -198,13 +198,13 @@
                 let warehouse_id = '{{ warehouse.id }}';
                 let quantities = {};
                 let shelf = $(`.shelf-input[data-product="${product_id}"]`).val();
-        
+            
                 // Collect all quantities for this product
                 $(`.quantity[data-product="${product_id}"]`).each(function () {
                     let store_uuid = $(this).data('store');
                     quantities[store_uuid] = parseInt($(this).text(), 10);
                 });
-        
+            
                 // Send data to server via AJAX
                 $.ajax({
                     url: '{% url "update_store_quantities" %}',  // Replace with your actual URL
@@ -218,6 +218,8 @@
                     },
                     success: function (response) {
                         showAlert('Quantities and shelf updated successfully.', 'success');
+                        // Reload the page after a successful update
+                        location.reload();
                     },
                     error: function (xhr, status, error) {
                         showAlert('Failed to update quantities: ' + error, 'danger');
@@ -238,7 +240,7 @@
                     alertContainer.find('.alert').alert('close');
                 }, 3000); // 3000 milliseconds = 3 seconds
             }
-
+        
             // Client form submission
             // Handle client form submission
             $('#clientForm').submit(function (event) {
@@ -306,7 +308,12 @@
                 });
             });
         });
+        
     </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
     
     {% endblock %}
 </body>
