--- a/templates/warehouse/store_detail.html
+++ b/templates/warehouse/store_detail.html
@@ -20,20 +20,22 @@
             <table class="table table-striped mb-0">
                 <thead class="thead-dark">
                     <tr>
-                        <th scope="col">Product Name</th>
-                        <th scope="col">Quantity</th>
+                        <th scope="col">No</th>
+                        <th scope="col">Oboi nomi</th>
+                        <th scope="col">Vitrina</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for product in store_products %}
                     <tr>
+                        <td scope="row" style="width: 10px; text-align: center;">{{ forloop.counter }}</td>
                         <td>{{ product.product.name }}</td>
                         <td>{{ product.quantity }}</td>
                     </tr>
                     {% endfor %}
                     {% if not store_products %}
                     <tr>
-                        <td colspan="2" class="text-center">No products found.</td>
+                        <td colspan="3" class="text-center">No products found.</td>
                     </tr>
                     {% endif %}
                 </tbody>
