--- a/templates/warehouse/wareHouse.html
+++ b/templates/warehouse/wareHouse.html
@@ -1,4 +1,5 @@
-{% load static %} {% load custom_filters %}
+{% load static %}
+{% load custom_filters %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -93,6 +94,7 @@
                 <table class="table table-striped table-bordered table-hover shadow-lg">
                     <thead>
                         <tr>
+                            <th scope="col" style="text-align: center;">#</th>
                             {% if is_from_all %}
                             <th>Sklad nomi</th>
                             {% endif %}
@@ -111,6 +113,7 @@
                     <tbody>
                         {% for entry in data %}
                         <tr class="text-center" data-product="{{ entry.product_id }}">
+                            <td scope="row" style="width: 10px; text-align: center;">{{ forloop.counter }}</td>
                             {% if is_from_all %}
                             <td>{{ entry.warehouse_name }}</td>
                             {% endif %}
@@ -119,7 +122,7 @@
                             {% for store_name, quantity in entry.store_quantities.items %}
                             <!-- HTML -->
                             <td>
-                                <div class="quantity-controls">
+                                <div class="quantity-controls" style="display: flex; justify-content: center;">
                                     <button type="button" class="btn btn-outline-danger btn-sm decrement" data-store="{{ store_name }}" data-product="{{ entry.product_id }}">
                                         <i class="fas fa-minus"></i>
                                     </button>
