--- a/templates/general/warehouse_list.html
+++ b/templates/general/warehouse_list.html
@@ -30,6 +30,7 @@
 
 <!-- Content -->
 {% block content %}
+{% include "_sidebar.html" %}
 <div class="container mt-5">
   <h1 class="text-center"><b>Warehouses</b></h1>
   <div class="row justify-content-center">
