--- a/templates/general/discount_products.html
+++ b/templates/general/discount_products.html
@@ -15,6 +15,7 @@
     gap: 20px;
     margin-top: 40px;
   }
+  
   .form-container, .events-list {
     width: 48%;
     padding: 20px;
@@ -22,34 +23,48 @@
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   }
-  .form-container h1 {
+  
+  .form-container h1, .events-list h2 {
     margin-bottom: 20px;
-    font-size: 24px;
     color: #333;
   }
+  
+  .form-container h1 {
+    font-size: 24px;
+  }
+  
+  .events-list h2 {
+    font-size: 22px;
+  }
+  
+  .form-group {
+    margin-bottom: 15px;
+  }
+  
   .form-group label {
     font-weight: bold;
     color: #555;
   }
+  
   .form-group select, .form-group input {
     margin-top: 5px;
   }
-  .form-group {
-    margin-bottom: 15px;
-  }
+  
   .btn-primary {
     background-color: #3498db;
     border-color: #3498db;
   }
+  
   .btn-primary:hover {
     background-color: #2980b9;
     border-color: #2980b9;
   }
-  .events-list h2 {
-    margin-bottom: 20px;
-    font-size: 22px;
-    color: #333;
+  
+  .events-list {
+    max-height: 600px; /* Adjust the height as needed */
+    overflow-y: auto; /* Enable vertical scrolling */
   }
+  
   .event-item {
     display: flex;
     justify-content: space-between;
@@ -57,12 +72,15 @@
     padding: 10px 0;
     border-bottom: 1px solid #eaeaea;
   }
+  
   .event-item:last-child {
     border-bottom: none;
   }
+  
   .event-details {
     max-width: 80%;
   }
+  
   .btn-remove {
     background-color: #e74c3c;
     color: white;
@@ -71,15 +89,17 @@
     padding: 5px 10px;
     cursor: pointer;
   }
+  
   .btn-remove:hover {
     background-color: #c0392b;
   }
+  
 </style>
 {% endblock %}
 
 <!-- Content -->
 {% block content %}
-<div class="container">
+<div class="container" style="margin: 40px auto;">
   <div class="form-container">
     <h1><b>Discount</b></h1>
     {% include "_search.html" %}
@@ -95,7 +115,7 @@
       </div>
       <div class="form-group">
         <label for="discount_number">Discount number</label>
-        <input type="text" class="form-control" id="discount_number" name="discount_number" />
+        <input type="text" class="form-control" id="discount_number" name="discount_number" placeholder="Skidka narxini kiriting" required>
       </div>
       <div class="form-group">
         <label for="groups">Select Groups</label>
