--- a/templates/store/stores.html
+++ b/templates/store/stores.html
@@ -14,6 +14,7 @@
 <body>
     {% block content %}
     {% include "_navbar.html" %}
+    {% include "_sidebar.html" %}
     
     <div class="container my-4">
         <div class="row">
