--- a/templates/warehouse/wareHouse.html
+++ b/templates/warehouse/wareHouse.html
@@ -16,83 +16,37 @@
 <body>
     {% block content %}
     {% include "warehouse/_navbar.html" %}
-    
-    <div class="container-fluid mt-4">    
+
+    <div class="container-fluid mt-4">
         <!-- Alert Container -->
         <div id="alert-container" class="mb-4"></div>
-    
-        <!-- Your existing content -->
+
         <div class="search_box" style="padding: 30px;">
             <form method="get" action="{% if is_from_all %}{% url 'wareHouse_all' %}{% else %}{% url 'wareHouse' warehouse.uuid %}{% endif %}">
                 <input type="hidden" name="last_warehouse_uuid" value="{{ last_warehouse_uuid }}">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">🔍</span>
-                    <input type="text" class="form-control" placeholder="Product name" aria-label="Product name" aria-describedby="basic-addon1" name="prompt" value="{{ search_query }}" required />
+                    <input type="text" class="form-control" placeholder="Product name" aria-label="Product name" aria-describedby="basic-addon1" name="prompt" value="{{ search_query }}">
                     <button type="submit" class="btn btn-outline-info">Search</button>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="True" id="flexCheckDefault" name="isFromAll" {% if is_from_all %}checked{% endif %} />
                     <label class="form-check-label" for="flexCheckDefault"> Barchasidan qidirish! </label>
                 </div>
-            </form>            
+            </form>
         </div>
-        <!-- Modal -->
-        <div class="modal fade" id="clientModal" tabindex="-1" role="dialog" aria-labelledby="clientModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="clientModalLabel">Client qo'shish</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form id="clientForm">
-                            <div class="form-group">
-                                <label for="clientName">Name</label>
-                                <input type="text" class="form-control" id="clientName" name="name" required />
-                            </div>
-                            <div class="form-group">
-                                <label for="clientPhone">Phone</label>
-                                <input type="text" class="form-control" id="clientPhone" name="phone" required />
-                            </div>
-                            <div id="clientAlert"></div>
-                            <button type="submit" class="btn btn-primary">Save</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Modal -->
-    
-        <div class="container-fluid"> 
+
+        <div class="container-fluid">
             <div class="center-side" style="display: flex;">
                 {% if not is_from_all %}
                 <h1>{{ warehouse.name }}</h1>
                 {% endif %}
-                <div class="sidebar-container">
-                    <div class="sidebar">
-                        {% for store in stores %}
-                        <div class="store">
-                            <button class="store-detail-button" data-store-id="{{ store.uuid }}">{{ store.name }}</button>
-                        </div>
-                        {% endfor %}
-                    </div>
-                </div>
             </div>
-            <!-- Add client button right side of table -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#clientModal" style="margin-bottom: 10px;">
-               Client qo'shish
-            </button>
 
-            <div id="store-details" style="display: none;">
-                <h2 id="store-name"></h2>
-                <p><strong>Warehouse:</strong> <span id="warehouse-name"></span></p>
-            </div>
             <!-- full width table -->
-            <div class="table-responsive">  
+            <div class="table-responsive" style="max-height: 70vh; overflow-y: auto;">
                 <table class="table table-striped table-bordered table-hover shadow-lg">
-                    <thead>
+                    <thead class="thead-sticky">
                         <tr>
                             <th scope="col" style="text-align: center;">#</th>
                             {% if is_from_all %}
@@ -100,7 +54,7 @@
                             {% endif %}
                             <th>Artikul nomi</th>
                             <th>Ostatok</th>
-                            {% if data %}
+                            {% if not is_from_all and data %}
                             {% for store_name, store in data.0.store_quantities.items %}
                             <th style="max-width: 10ch; overflow: hidden; text-overflow: ellipsis;">{{ store_name }}</th>
                             {% endfor %}
@@ -119,8 +73,8 @@
                             {% endif %}
                             <td class="text-left">{{ entry.product_name }}</td>
                             <td>{{ entry.ostatok }}</td>
+                            {% if not is_from_all %}
                             {% for store_name, quantity in entry.store_quantities.items %}
-                            <!-- HTML -->
                             <td>
                                 <div class="quantity-controls" style="display: flex; justify-content: center;">
                                     <button type="button" class="btn btn-outline-danger btn-sm decrement" data-store="{{ store_name }}" data-product="{{ entry.product_id }}">
@@ -131,7 +85,7 @@
                                         <i class="fas fa-plus"></i>
                                     </button>
                                 </div>
-                            </td>                            
+                            </td>
                             {% endfor %}
                             <td class="left-in-warehouse">{{ entry.left_product_count_in_warehouse }}</td>
                             <td style="max-width: 10ch; overflow: hidden; text-overflow: ellipsis;">
@@ -140,6 +94,7 @@
                             <td>
                                 <button type="button" class="btn btn-primary save" data-product="{{ entry.product_id }}">Save</button>
                             </td>
+                            {% endif %}
                         </tr>
                         {% empty %}
                         <tr>
@@ -149,6 +104,7 @@
                     </tbody>
                 </table>
             </div>
+            
         </div>
     </div>
     
@@ -170,47 +126,42 @@
             });
         
             // Increment and decrement buttons
+            {% if not is_from_all %}
             $('.increment, .decrement').click(function () {
                 let span = $(this).siblings('.quantity');
                 let currentQuantity = parseInt(span.text(), 10);
                 let change = $(this).hasClass('increment') ? 1 : -1;
                 let newQuantity = currentQuantity + change;
-        
-                if (newQuantity >= 0) { // Prevent negative quantities
+
+                if (newQuantity >= 0) {
                     span.text(newQuantity);
-                    // Update the 'Left in Warehouse' value
                     updateLeftInWarehouse($(this).data('product'));
                 }
             });
-        
+
             function updateLeftInWarehouse(productId) {
                 let totalQuantity = 0;
-        
-                // Sum up quantities from all stores
+
                 $(`.quantity[data-product="${productId}"]`).each(function () {
                     totalQuantity += parseInt($(this).text(), 10);
                 });
-        
-                // Find the row for the given product and update the 'Left in Warehouse'
+
                 $(`tr[data-product="${productId}"] .left-in-warehouse`).text(totalQuantity);
             }
-        
-            // Save button
+
             $('.save').click(function () {
                 let product_id = $(this).data('product');
                 let warehouse_id = '{{ warehouse.id }}';
                 let quantities = {};
                 let shelf = $(`.shelf-input[data-product="${product_id}"]`).val();
-            
-                // Collect all quantities for this product
+
                 $(`.quantity[data-product="${product_id}"]`).each(function () {
                     let store_uuid = $(this).data('store');
                     quantities[store_uuid] = parseInt($(this).text(), 10);
                 });
-            
-                // Send data to server via AJAX
+
                 $.ajax({
-                    url: '{% url "update_store_quantities" %}',  // Replace with your actual URL
+                    url: '{% url "update_store_quantities" %}',
                     method: 'POST',
                     data: {
                         'product_id': product_id,
@@ -221,7 +172,6 @@
                     },
                     success: function (response) {
                         showAlert('Quantities and shelf updated successfully.', 'success');
-                        // Reload the page after a successful update
                         location.reload();
                     },
                     error: function (xhr, status, error) {
@@ -229,7 +179,8 @@
                     }
                 });
             });
-        
+            {% endif %}
+
             function showAlert(message, type) {
                 const alertContainer = $('#alert-container');
                 alertContainer.html(`
@@ -237,13 +188,12 @@
                         ${message}
                     </div>
                 `);
-                
-                // Auto-remove the alert after 3 seconds
+
                 setTimeout(() => {
                     alertContainer.find('.alert').alert('close');
-                }, 3000); // 3000 milliseconds = 3 seconds
+                }, 3000);
             }
-        
+
             // Client form submission
             // Handle client form submission
             $('#clientForm').submit(function (event) {
